benchmarks/mybenchmarks/websites/linux/code/aoc2021_day09b.2.hs.log

Thu, 23 Dec 2021 01:34:25 GMT

MAKE:
ghc -O2 aoc2021_day09b.hs-2.hs -o app_hs
[1 of 1] Compiling Main             ( aoc2021_day09b.hs-2.hs, aoc2021_day09b.hs-2.o )

aoc2021_day09b.hs-2.hs:183:30: error:
    Not in scope: `S.empty'
    Perhaps you meant `M.empty' (imported from Data.Map)
    No module named `S' is imported.
    |
183 | dfsOn repr next start = loop S.empty [start]
    |                              ^^^^^^^

aoc2021_day09b.hs-2.hs:187:11: error:
    Not in scope: `S.member'
    Perhaps you meant `M.member' (imported from Data.Map)
    No module named `S' is imported.
    |
187 |       | r `S.member` seen = loop seen xs
    |           ^^^^^^^^^^

aoc2021_day09b.hs-2.hs:191:17: error:
    Not in scope: `S.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `S' is imported.
    |
191 |         seen' = S.insert r seen
    |                 ^^^^^^^^

aoc2021_day09b.hs-2.hs:196:33: error:
    Not in scope: `IS.empty'
    Perhaps you meant `M.empty' (imported from Data.Map)
    No module named `IS' is imported.
    |
196 | dfsOnInt repr next start = loop IS.empty [start]
    |                                 ^^^^^^^^

aoc2021_day09b.hs-2.hs:200:11: error:
    Not in scope: `IS.member'
    Perhaps you meant `M.member' (imported from Data.Map)
    No module named `IS' is imported.
    |
200 |       | r `IS.member` seen = loop seen xs
    |           ^^^^^^^^^^^

aoc2021_day09b.hs-2.hs:204:17: error:
    Not in scope: `IS.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `IS' is imported.
    |
204 |         seen' = IS.insert r seen
    |                 ^^^^^^^^^

aoc2021_day09b.hs-2.hs:212:31: error:
    Not in scope: `S.empty'
    Perhaps you meant `M.empty' (imported from Data.Map)
    No module named `S' is imported.
    |
212 | bfsOn repr next starts = loop S.empty (D.fromList starts)
    |                               ^^^^^^^

aoc2021_day09b.hs-2.hs:212:40: error:
    Not in scope: `D.fromList'
    Perhaps you meant `M.fromList' (imported from Data.Map)
    No module named `D' is imported.
    |
212 | bfsOn repr next starts = loop S.empty (D.fromList starts)
    |                                        ^^^^^^^^^^

aoc2021_day09b.hs-2.hs:214:12: error:
    Not in scope: data constructor `D.Empty'
    Perhaps you meant variable `M.empty' (imported from Data.Map)
    No module named `D' is imported.
    |
214 |     loop _ D.Empty = []
    |            ^^^^^^^

aoc2021_day09b.hs-2.hs:215:18: error:
    Not in scope: data constructor `D.:<|'
    No module named `D' is imported.
    |
215 |     loop seen (x D.:<| xs)
    |                  ^^^^^

aoc2021_day09b.hs-2.hs:216:11: error:
    Not in scope: `S.member'
    Perhaps you meant `M.member' (imported from Data.Map)
    No module named `S' is imported.
    |
216 |       | r `S.member` seen = loop seen xs
    |           ^^^^^^^^^^

aoc2021_day09b.hs-2.hs:217:45: error:
    Not in scope: `D.appendList'
    No module named `D' is imported.
    |
217 |       | otherwise         = x : loop seen' (D.appendList nexts xs)
    |                                             ^^^^^^^^^^^^

aoc2021_day09b.hs-2.hs:220:17: error:
    Not in scope: `S.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `S' is imported.
    |
220 |         seen' = S.insert r seen
    |                 ^^^^^^^^

aoc2021_day09b.hs-2.hs:226:34: error:
    Not in scope: `IS.empty'
    Perhaps you meant `M.empty' (imported from Data.Map)
    No module named `IS' is imported.
    |
226 | bfsOnInt repr next starts = loop IS.empty (D.fromList starts)
    |                                  ^^^^^^^^

aoc2021_day09b.hs-2.hs:226:44: error:
    Not in scope: `D.fromList'
    Perhaps you meant `M.fromList' (imported from Data.Map)
    No module named `D' is imported.
    |
226 | bfsOnInt repr next starts = loop IS.empty (D.fromList starts)
    |                                            ^^^^^^^^^^

aoc2021_day09b.hs-2.hs:228:12: error:
    Not in scope: data constructor `D.Empty'
    Perhaps you meant variable `M.empty' (imported from Data.Map)
    No module named `D' is imported.
    |
228 |     loop _ D.Empty = []
    |            ^^^^^^^

aoc2021_day09b.hs-2.hs:229:18: error:
    Not in scope: data constructor `D.:<|'
    No module named `D' is imported.
    |
229 |     loop seen (x D.:<| xs)
    |                  ^^^^^

aoc2021_day09b.hs-2.hs:230:11: error:
    Not in scope: `IS.member'
    Perhaps you meant `M.member' (imported from Data.Map)
    No module named `IS' is imported.
    |
230 |       | r `IS.member` seen = loop seen xs
    |           ^^^^^^^^^^^

aoc2021_day09b.hs-2.hs:231:46: error:
    Not in scope: `D.appendList'
    No module named `D' is imported.
    |
231 |       | otherwise          = x : loop seen' (D.appendList nexts xs)
    |                                              ^^^^^^^^^^^^

aoc2021_day09b.hs-2.hs:234:17: error:
    Not in scope: `IS.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `IS' is imported.
    |
234 |         seen' = IS.insert r seen
    |                 ^^^^^^^^^

aoc2021_day09b.hs-2.hs:243:32: error:
    Not in scope: `S.empty'
    Perhaps you meant `M.empty' (imported from Data.Map)
    No module named `S' is imported.
    |
243 | astarOn repr next start = loop S.empty (PQ.singleton 0 (0,start))
    |                                ^^^^^^^

aoc2021_day09b.hs-2.hs:243:41: error:
    Not in scope: `PQ.singleton'
    Perhaps you meant one of these:
      `L.singleton' (imported from Data.List),
      `M.singleton' (imported from Data.Map)
    No module named `PQ' is imported.
    |
243 | astarOn repr next start = loop S.empty (PQ.singleton 0 (0,start))
    |                                         ^^^^^^^^^^^^

aoc2021_day09b.hs-2.hs:245:15: error:
    Not in scope: data constructor `PQ.Empty'
    No module named `PQ' is imported.
    |
245 |     loop _    PQ.Empty               = []
    |               ^^^^^^^^

aoc2021_day09b.hs-2.hs:246:25: error:
    Not in scope: data constructor `PQ.:<|'
    No module named `PQ' is imported.
    |
246 |     loop seen ((cost,x) PQ.:<| rest)
    |                         ^^^^^^

aoc2021_day09b.hs-2.hs:247:11: error:
    Not in scope: `S.member'
    Perhaps you meant `M.member' (imported from Data.Map)
    No module named `S' is imported.
    |
247 |       | r `S.member` seen = loop seen rest
    |           ^^^^^^^^^^

aoc2021_day09b.hs-2.hs:251:17: error:
    Not in scope: `S.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `S' is imported.
    |
251 |         seen' = S.insert r seen
    |                 ^^^^^^^^

aoc2021_day09b.hs-2.hs:252:17: error:
    Not in scope: DF.foldl'
    Perhaps you meant one of these:
      L.foldl' (imported from Data.List),
      M.foldl' (imported from Data.Map)
    No module named `DF' is imported.
    |
252 |         rest' = DF.foldl' (\q (p,v) -> PQ.insert p v q) rest nexts
    |                 ^^^^^^^^^

aoc2021_day09b.hs-2.hs:252:40: error:
    Not in scope: `PQ.insert'
    Perhaps you meant one of these:
      `L.insert' (imported from Data.List),
      `M.insert' (imported from Data.Map)
    No module named `PQ' is imported.
    |
252 |         rest' = DF.foldl' (\q (p,v) -> PQ.insert p v q) rest nexts
    |                                        ^^^^^^^^^
make: [/benchmarks/bencher/makefiles/my.linux.Makefile:66: aoc2021_day09b.hs-2.hs_run] Error 1 (ignored)

0.82s to complete and log all make actions

COMMAND LINE:
./app_hs 0 < aoc2021_day09b-input1.txt

MAKE ERROR 

